test(ecl): fix failed ECL labeler test after improving syntax error...
...output in snomed-ecl version 1.5.1